# wiremux

./: .gitignore  AGENTS.md  README.md  README_CN.md  VERSION
.agents/skills/finish-work/: SKILL.md
.agents/skills/trellis-finish-work/: SKILL.md
.codex/skills/omv-versioning/: SKILL.md
.github/: FUNDING.yml
.github/workflows/: esp-registry-release.yml
.omv/: adapters.toml  config.toml  finalizations.toml  integrations.toml  state.toml  targets.toml
.omv/ai/: contract.json  instructions.md
.omv/skills/: README.md  bump-guidance.md
.trellis/: .template-hashes.json  config.yaml  workflow.md
.trellis/spec/backend/: database-guidelines.md  directory-structure.md  error-handling.md  index.md  logging-guidelines.md  quality-guidelines.md
.trellis/spec/frontend/: component-guidelines.md  directory-structure.md  hook-guidelines.md  index.md  quality-guidelines.md  state-management.md  type-safety.md
.trellis/spec/guides/: index.md  omv-versioning-guide.md
.trellis/tasks/00-bootstrap-guidelines/: task.json
.trellis/tasks/04-25-esp32-serial-mux-design/: prd.md  task.json
.trellis/tasks/04-25-pr1-host-decoder/: check.jsonl  task.json
.trellis/tasks/04-25-pr2-esp32-component/: task.json
.trellis/tasks/04-25-pr3-console-log-adapters/: prd.md  task.json
.trellis/tasks/04-25-pr4-docs-polish/: task.json
.trellis/tasks/04-25-pr5-host-transmit/: prd.md  task.json
.trellis/tasks/04-25-pr6-esp32-inbound-dispatch/: prd.md  task.json
.trellis/tasks/04-25-pr7-console-line-mode-e2e/: prd.md  task.json
.trellis/tasks/04-25-pr8-serial-backend-hardening/: prd.md  task.json
.trellis/tasks/04-26-batch-compression-diagnostics-docs/: prd.md  task.json
.trellis/tasks/04-26-configurable-heatshrink-lz4-codecs/: prd.md  task.json
.trellis/tasks/04-26-esp-channel-batching-service-policies/: task.json
.trellis/tasks/04-26-esp-send-modes-log-payload-strategy/: check.jsonl  implement.jsonl  task.json
.trellis/tasks/04-26-wiremux-product-scope/: task.json
.trellis/tasks/04-27-04-27-registry-example-2604-27-2/: prd.md  task.json
.trellis/tasks/04-27-console-passthrough-2604-27-3/: task.json
.trellis/tasks/04-27-esp-demo-enum-conversion-cleanup/: task.json
.trellis/tasks/04-27-host-ratatui-tui/: prd.md
.trellis/tasks/04-27-host-tui-log-scrollback/: task.json
.trellis/tasks/04-27-host-tui-pr1-core-capability/: task.json
.trellis/tasks/04-27-host-tui-pr2-esp-manifest/: prd.md  task.json
.trellis/tasks/04-27-host-tui-pr3-host-manifest/: task.json
.trellis/tasks/04-27-host-tui-pr4-ratatui/: prd.md  task.json
.trellis/tasks/04-27-host-tui-pr5-docs-checks/: task.json
.trellis/tasks/04-27-polish-tui-product-experience/: check.jsonl  task.json
.trellis/tasks/04-27-proto-api-versioning-core-host-sdk/: prd.md  task.json
.trellis/tasks/04-27-versioning-esp-registry-release/: prd.md  task.json
.trellis/tasks/04-28-fix-tui-passthrough-wrapped-cursor/: check.jsonl  implement.jsonl  task.json
.trellis/tasks/04-28-host-tui-selectable-output/: task.json
.trellis/tasks/04-28-non-polling-tui-event-loop/: task.json
.trellis/tasks/04-28-passthrough-input-hint/: task.json
.trellis/tasks/04-29-generic-enhanced-virtual-serial/: prd.md  task.json
.trellis/tasks/04-29-host-rust-crate-split/: task.json
.trellis/tasks/04-29-pr1-docs-source-layout-build-spec/: task.json
.trellis/tasks/04-29-pr2-migrate-proto-api-boundary/: task.json
.trellis/tasks/04-29-pr3-migrate-espressif-vendor-layout/: task.json
docs/: esp-registry-release.md  product-architecture.md  source-layout-build.md  wiremux-tui-menuconfig-style.md
docs/matrix/: feature-support.md  tui-shortcuts.md
docs/zh/: channel-binding.md  esp-idf-console-integration.md  getting-started.md  host-tool.md  troubleshooting.md
sources/core/: README.md
sources/core/c/: CMakeLists.txt
sources/core/c/include/: wiremux_batch.h  wiremux_compression.h  wiremux_envelope.h  wiremux_frame.h  wiremux_host_session.h  wiremux_manifest.h  wiremux_status.h  wiremux_version.h
sources/core/c/src/: wiremux_batch.c  wiremux_compression.c  wiremux_envelope.c  wiremux_frame.c  wiremux_host_session.c  wiremux_manifest.c  wiremux_proto_internal.h  wiremux_version.c
sources/core/c/tests/: wiremux_core_smoke_test.c  wiremux_core_test.cpp
sources/esp32/components/esp-wiremux/: CMakeLists.txt  idf_component.yml
sources/esp32/components/esp-wiremux/include/: esp_wiremux.h  esp_wiremux_console.h  esp_wiremux_frame.h  esp_wiremux_log.h
sources/esp32/components/esp-wiremux/src/: esp_wiremux.c  esp_wiremux_console.c  esp_wiremux_frame.c  esp_wiremux_log.c
sources/host/: Cargo.toml  build.rs
sources/host/proto/: esp_serial_mux.proto
sources/host/src/: batch.rs  codec.rs  crc32.rs  envelope.rs  frame.rs  host_session.rs  interactive.rs  lib.rs  main.rs  manifest.rs  tui.rs
sources/host/wiremux/: Cargo.toml
sources/host/wiremux/crates/cli/: Cargo.toml
sources/host/wiremux/crates/cli/src/: args.rs  diagnostics.rs  display.rs  lib.rs  main.rs  serial.rs
sources/host/wiremux/crates/enhanced-registry/: Cargo.toml
sources/host/wiremux/crates/enhanced-registry/src/: lib.rs
sources/host/wiremux/crates/generic-enhanced/: Cargo.toml  build.rs
sources/host/wiremux/crates/generic-enhanced/src/: lib.rs
sources/host/wiremux/crates/host-session/: Cargo.toml  build.rs
sources/host/wiremux/crates/host-session/src/: lib.rs
sources/host/wiremux/crates/interactive/: Cargo.toml
sources/host/wiremux/crates/interactive/src/: lib.rs
sources/host/wiremux/crates/tui/: Cargo.toml  build.rs  status-fields.toml
sources/host/wiremux/crates/tui/src/: args.rs  clipboard.rs  esp_enhanced.rs  lib.rs
sources/host/wiremux/crates/vendor-enhanced/: Cargo.toml  build.rs
sources/host/wiremux/crates/vendor-enhanced/src/: lib.rs
sources/host/wiremux/crates/wiremux-cli/: Cargo.toml
sources/host/wiremux/crates/wiremux-cli/src/: host_session.rs  interactive.rs  lib.rs
sources/profiles/: README.md
tools/: wiremux-build
tools/esp-registry/: generate-packages.sh
tools/wiremux-build-helper/: Cargo.toml
(+272 files in other folders)
