[package]
name = "wiremux"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

[lib]
name = "wiremux"
path = "src/lib.rs"

[[bin]]
name = "wiremux"
path = "src/main.rs"

[dependencies]
crossterm = "0.29"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
serialport = "4"
