[package]
name = "wiremux"
version = "2604.27.3"
edition = "2021"
license = "Apache-2.0"

[lib]
name = "wiremux"
path = "src/lib.rs"

[[bin]]
name = "wiremux"
path = "src/main.rs"

[dependencies]
crossterm = "0.29"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
serialport = "4"
