[package]
name = "cli"
version = "2604.30.1"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
generic = []
generic-enhanced = ["generic"]
esp32 = ["generic-enhanced"]
all-vendors = ["generic-enhanced", "esp32"]
all-features = ["all-vendors"]

[lib]
name = "cli"
path = "src/lib.rs"

[[bin]]
name = "wiremux"
path = "src/main.rs"

[dependencies]
crossterm = "0.29"
host-session = { path = "../host-session" }
interactive = { path = "../interactive" }
serialport = "4"
tui = { path = "../tui" }
