[package]
name = "interactive"
version = "2605.3.2"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
generic-enhanced = []

[dependencies]
crossterm = "0.29"
generic-enhanced = { path = "../generic-enhanced" }
host-session = { path = "../host-session" }
serde = { version = "1", features = ["derive"] }
serialport = "4"
toml = "0.8"

[target.'cfg(unix)'.dependencies]
mio = { version = "1", features = ["os-ext", "os-poll"] }
nix = { version = "0.26", default-features = false, features = ["fs", "term"] }
signal-hook = "0.3"
signal-hook-mio = { version = "0.2", features = ["support-v1_0"] }
