[package]
name = "tui"
version = "2604.30.2"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
esp32 = ["vendor-enhanced"]

[dependencies]
crossterm = "0.29"
host-session = { path = "../host-session" }
interactive = { path = "../interactive" }
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
vendor-enhanced = { path = "../vendor-enhanced", optional = true }
