[package]
name = "wiremux"
version = "2604.29.3"
edition = "2021"
license = "Apache-2.0"

[features]
default = []
generic = []
esp32 = []
all-vendors = ["generic", "esp32"]
all-features = ["all-vendors"]

[lib]
name = "wiremux"
path = "src/lib.rs"

[[bin]]
name = "wiremux"
path = "src/main.rs"

[dependencies]
crossterm = "0.29"
ratatui = { version = "0.30", default-features = false, features = ["crossterm"] }
serialport = "4"

[target.'cfg(unix)'.dependencies]
mio = { version = "1", features = ["os-ext", "os-poll"] }
signal-hook = "0.3"
signal-hook-mio = { version = "0.2", features = ["support-v1_0"] }
